fixed all modals page-jump issues!!!!

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -176,21 +176,21 @@ textarea{
 #homepageProjectContainer-after {
 
 	color: rgb(236, 236, 236);
-	background-color: rgb(201, 20, 44);
+	background-color: rgb(180, 20, 42);
 
 }
 
 #homepageProjectContainer-artemis {
 	
 	color: rgb(236, 236, 236);
-	background-color: rgb(201, 20, 44);
+	background-color: rgb(17, 17, 17);
 	
 }
 
 #homepageProjectContainer-bodega {
 
 	color: rgb(17, 17, 17);
-	background-color: rgb(199, 235, 252);
+	background-color: rgb(207, 165, 86);
 
 }
 
@@ -204,7 +204,7 @@ textarea{
 #homepageProjectContainer-busan {
 
 	color: rgb(17, 17, 17);
-	background-color: rgb(199, 235, 252);
+	background-color: rgb(90, 195, 252);
 }
 
 #homepageProjectContainer-dots {
@@ -214,38 +214,31 @@ textarea{
 	
 }
 
-#homepageProjectContainer-giftpitch {
-	
-	color: rgb(236, 236, 236);
-	background-color: rgb(201, 20, 44);
-	
-}
-
 #homepageProjectContainer-joliet {
 	
-	color: rgb(236, 236, 236);
-	background-color: rgb(201, 20, 44);
+	color: rgb(17, 17, 17);
+	background-color: rgb(111, 189, 100);
 	
 }
 
 #homepageProjectContainer-lmhtf {
 	
-	color: rgb(236, 236, 236);
-	background-color: rgb(201, 20, 44);
+	color: rgb(17, 17, 17);
+	background-color: rgb(183, 51, 52);
 	
 }
 
-#homepage-project-container-queen {
+#homepageProjectContainer-queen {
 	
-	color: rgb(236, 236, 236);
-	background-color: rgb(91, 56, 31);
+	color: rgb(17, 17, 17);
+	background-color: rgb(209, 240, 255);
 	
 }
 
 #homepageProjectContainer-saigon {
 	
-	color: rgb(236, 236, 236);
-	background-color: rgb(91, 56, 31);
+	color: rgb(17, 17, 17);
+	background-color: rgb(161, 158, 162);
 	
 }
 
@@ -266,14 +259,14 @@ textarea{
 #homepageProjectContainer-whyu {
 	
 	color: rgb(236, 236, 236);
-	background-color: rgb(91, 56, 31);
+	background-color: rgb(176, 83, 17);
 	
 }
 
 #homepageProjectContainer-whyushenqing {
 	
-	color: rgb(236, 236, 236);
-	background-color: rgb(91, 56, 31);
+	color: rgb(17, 17, 17);
+	background-color: rgb(201, 208, 187);
 	
 }
 
